assets/css/style.scss
/* ... */
/*------------------
FOOTNOTES & REFERENCES
-------------------*/


.footnotes {
    font-size: var(--font-small);
    padding-top: var(--pad-large);
    ol {
        margin-left: var(--pad);
    }
    li{
        margin-bottom: var(--pad);
    }
    p {
        line-height: 1.2;
        word-wrap: break-word;
        margin: 0;
        width: 100%;
    }
    hr{
        margin-bottom: var(--pad-large);
    }
}

sup {
    position: relative;
    top: 2px;
    left: -2px;
    font-size: 0.6em;
    font-family: var(--monospace);
    margin-right: 5px;
    a {
        border-bottom: none;
    }
}

sub {
    vertical-align: baseline;
    font-size: 0.75rem;
}

.ref {
    border: 1px solid var(--color-primary);
    padding: var(--pad);
    background: #fff;
    z-index: 10;
    position: absolute;
    right: 0;
    width: 300px;
    margin-top: -2rem;
    max-width: 50%;
    display: none;
    p {
        margin: 0;
        word-wrap: break-word;
        display: inline;
    }
    &:hover {
        cursor: pointer;
    }
    .footnote-backref {
        display: none;
    }
}

a.footnote-backref {
    border-bottom: none;
    padding-right: var(--pad-small);
}

[id^=fn] {
    .ref {
        text-indent: 0;
    }
}

.show {
    .ref {
        display: block;
    }
}



#related {
    border-top: 2px solid var(--color-primary);
}

/*------------------
ETC
-------------------*/

.button {
    display: block;
    padding: var(--pad);
    border: 2px solid var(--color-primary);
    border-width: 2px;
    text-align: center;
    margin: 1rem auto;
    width: 400px;
    &:hover {
        cursor: pointer;
        color: var(--color-sub);
        border-color: var(--color-sub);
    }
    .icon {
        vertical-align: bottom;
    }
}

address {
    p {
        display: inline;
    }
}


/*------------------
POST NAVIGATION
-------------------*/

.post-info {
    margin: var(--pad-large) 0;
}

#post-nav {
    width: 100%;
    list-style-type: none;
    overflow: auto;
    margin-bottom: var(--pad-large);
    li {
        display: block;
        float: left;
        width: 50%;
    }
    li.newer {
        padding-right: var(--pad);
    }
    li.older {
        float: right;
    }
    .gray {
        font-size: var(--font-small);
    }
}


/*------------------
FOOTER
-------------------*/

footer {
    h2 {
        text-transform: uppercase;
    }
    .dashboard {
        margin-top: var(--pad-large);
        .weather_day::before {
            content: " ";
            display: block;
        }
        .weather_day:first-child::before {
            content: "";
        }
    }
}

.footer-links {
    a {
        display: block;
    }
}

//weather icon image sprite
.weather_icon {
    background: url(/icons/weather_sprite.svg);
    display: inline-block;
    height: 1rem;
    width: 1rem;
    position: relative;
    top: 3px;
    left: 5px;
    background-size: 110px;
    background-position: -40px 0;
    background-repeat: no-repeat;
}

.partly-cloudy-day {
    background-position: -20px 0;
}

.clear-day {
    background-position: 0 0;
}

.clear-night {
    background-position: -60px 0;
}

.partly-cloudy-night {
    background-position: -80px 0;
}

.rain {
    background-position: -100px 0;
}

footer .weather_text {
    display: none;
}

.entry-content .weather_text {
    display: inline-block;
    padding-left: 0.5rem;
}

.entry-content .weather_day {
    margin-top: 1rem;
    display: block;
    text-transform: uppercase;
}

// Server Stats
#server {
    //power page
    margin: auto;
    margin-bottom: 50px;
    dt,
    dd {
        padding: var(--pad) 0;
        border-bottom: 1px solid var(--color-primary);
    }
    dt {
        width: 300px;
        float: left;
        padding-right: 1rem;
        @include media(tablet) {
            float: none;
            width: 100%;
            border-bottom: 0;
            padding-bottom: 0;
        }
    }

}

#stats {
    //stats on footer
    dt {
        float: left;
        &::after {
            content: ":\00a0 ";
        }
    }
}


/*---------------
{{< columns >}}
------------*/

.columns {
    margin: 2rem 8rem;
    columns: 2 2rem;
  }


/*---------------
Global Responsive Styles
------------*/

@include media(tablet) {
    html {
        font-size: 18px;
    }
    .article-list .grid {
        .article {
            grid-column: span 2;
        }
    }
    //menu
    //show for other languages
    #menu-s span{
        display: block;
        text-transform: uppercase;
        letter-spacing: 1px;
        padding-top: 2px;
        &:hover {
            cursor: pointer;
            color: var(--color-sub);
        }
    }
    nav#menu>ul li {
        &::before {
            content: "";
        }
        display: block;
        margin: 0 var(--pad) 0 0;
    }
    #menu-list {
        height: 0;
        padding-left: 26px;
        overflow: hidden;
        transition: height 300ms ease-in-out;
        &.show {
            height: 100%;
        }
        // .rss {
        //     position: relative;
        //     top: 0px;
        //     left: -2px;
        // }
    }
}

@include media(mobile) {
    :root{
        --font-xlarge: 2rem;
        --font-large: 1.4rem;
    }
    html {
        font-size: 16px;
    }
    #menu-s span{
        padding-top: 3px;
    }
    .cover {
        .image {
            grid-row: 1;
        }
        .text {
            grid-row: 2;
        }
    }
    .article-list .grid  {
        display: block;
        .article ,.cover{
            margin-bottom: var(--pad-section);
        }
        .featured-img{
            margin-bottom: 0;
        }
    }
    sup{
        font-size: 0.7em;
    }
    .footnotes ol{
        margin-left: var(--pad-large);
    }
    .dashboard .grid {
        grid-template-columns: repeat(2, 1fr);
    }
}



@import "_print";

